tests/test64.rael.exp
Error [tests/test64.rael:1:1]: Unrecognized token
| rael
| ^
